Fix rules spacing

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -582,6 +582,7 @@ nav {
 .rules-container {
   display: flex;
   flex-direction: row;
+  padding: 2vh 0vw;
 }
 
 .instructions {
